# GViewer

./: .gitignore  CMakeLists.txt  README.md  consts.cpp  main.cpp
Exceptions/: Exception.h++  Graphics.h++  Math.h++  Memory.h++  Range.h++
GUI/: CoordsRow.h++  Facade.h++  MainWindow.h++  RightMenu.h++  ScreenView.h++
GUI/Utils/: LabeledSpinBox.h++
Geometry/Basics/: Angle.h++  Point2.h++  Point3.h++  Vector.h++
Geometry/Transform/: PointTransformer.h++
Geometry/Utils/: AngleSystem.h++  ScaleFactor.h++
Graphics/Basics/: Polygon.h++  RGBA.h++  ShadingCoefficients.h++  Vertex.h++
Graphics/Materials/: ColorMaterial.h++  IMaterial.h++
Graphics/Scene/: BaseSceneObject.h++  CompositeSceneObject.h++  ISceneObject.h++
Graphics/Scene/ConcreteObjects/: Box.h++  Scene.h++  SingleSidePlane.h++
Graphics/Scene/ConcreteObjects/Cameras/: Camera.h++  ICamera.h++
Graphics/Scene/ConcreteObjects/Lights/: AmbientLight.h++  DotLight.h++  ILight.h++
Graphics/Scene/ConcreteObjects/cpp/: AmbientLight.cpp  DotLight.cpp  Polygon.cpp
Graphics/Screen/: CameraPyramid.h++  IRenderer.h++  Renderer.h++  Screen.h++
Graphics/Screen/Render/: IRenderer.h++  Renderer.h++
Graphics/Screen/Render/RenderableObjects/: IRenderable.h++
Graphics/Screen/Render/RenderableObjects/3D/: Renderable3DObject.h++  RenderablePolygon.h++
Graphics/Screen/Render/RenderableObjects/Lights/: IRenderableLight.h++  RenderableAmbientLight.h++  RenderableDotLight.h++
Graphics/Screen/Render/Shaders/: GouraudShader.h++  IShader.h++  LambertShader.h++  PhongShader.h++  SceletShader.h++
Settings/: Settings.h++
Utils/: BaseObject.h++  Interpolator.h++  LineInterpolator.h++
Utils/Containers/: DynArray.h++  Matrix.h++  Pair.h++  RangedValue.h++  Vector.h++
Utils/Interpolation/: Interpolator.h++
Utils/Interpolation/LineInterpolation/: ILineInterpolatorLine.h++  LineInterpolator.h++  Point2InterpolationLine.h++
